# MTP

./: README.md  cli.py  pyproject.toml
manytime/: __init__.py  __main__.py  interactive.py
